# vultr

./: .cursorrules  .gitignore  DEPLOYMENT.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_SUCCESS.md  FAUCET_GUIDE.md  OPTION2_CHANGES.md  README.md  STATUS.md  TESTING_STATUS.md  TEST_RESULTS.md  test-protocol.sh
bot/: .env.devnet  .env.example  TESTING.md  jest.config.js  package.json  test-bot.ts  tsconfig.json
bot/src/: calculator.ts  circuitBreaker.ts  config.ts  executor.old.ts  executor.ts  index.ts  logger.ts  marginfi-updated.ts  marginfi.ts  monitor.ts  oracle.ts  retry.ts  test-alerts.ts  types.ts
bot/src/__tests__/: circuitBreaker.test.ts  jupiterValidation.test.ts
bot/src/vultr/: client.ts  index.ts  recordProfit.ts  staking.ts
contracts/: Anchor.toml  package.json  tsconfig.json
contracts/programs/vultr/: Cargo.toml
contracts/programs/vultr/src/: constants.rs  error.rs  lib.rs
contracts/programs/vultr/src/instructions/: admin.rs  complete_liquidation.rs  deposit.rs  deregister_operator.rs  execute_liquidation.rs  initialize_pool.rs  mod.rs  record_profit.rs  register_operator.rs  request_operator_withdrawal.rs  update_pool_cap.rs  withdraw.rs
contracts/programs/vultr/src/state/: depositor.rs  mod.rs  operator.rs  pool.rs
contracts/scripts/: initialize-pool-v2.ts  initialize-staking-pool.ts  initialize-usdc-pool.ts  test-devnet.ts  verify-devnet.ts
contracts/tests/: full-flow.ts  vltr-staking.ts  vultr.ts
docs/: liquidation-implementation-design.md
sdk/: package.json
sdk/src/: client.ts  constants.ts  index.ts  pda.ts  types.ts  utils.ts
(+14 files in other folders)
